// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A show loads correctly with a gallery 1`] = `
<Layout>
  <SEO
    description="<p>All the acting</p>"
    image="https://example.com"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <div
    className="mainImage"
  >
    <img
      alt="A cool image"
      sizes="(max-width: 400px) 360px,(max-width: 800px) 760px,(max-width: 1200) 1140px"
      src="https://example.com"
      srcSet="https://example.com?w=400&fit=crop 400w, https://example.com?w=800&fit=crop 800w, https://example.com?w=1200&fit=crop 1200w, "
    />
  </div>
  <div
    className="showDescription"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>All the acting in a longer way.</p>",
      }
    }
  />
  <h4
    className="tickets"
  >
    <a
      href="https://example.com"
    >
      Tickets
    </a>
  </h4>
  <Gallery
    images={
      Array [
        Object {
          "description": "A cool image",
          "url": "https://example.com",
        },
      ]
    }
  />
</Layout>
`;

exports[`A show loads correctly with no gallery 1`] = `
<Layout>
  <SEO
    description="<p>All the acting</p>"
    image="https://example.com"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <div
    className="mainImage"
  >
    <img
      alt="A cool image"
      sizes="(max-width: 400px) 360px,(max-width: 800px) 760px,(max-width: 1200) 1140px"
      src="https://example.com"
      srcSet="https://example.com?w=400&fit=crop 400w, https://example.com?w=800&fit=crop 800w, https://example.com?w=1200&fit=crop 1200w, "
    />
  </div>
  <div
    className="showDescription"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>All the acting in a longer way.</p>",
      }
    }
  />
  <h4
    className="tickets"
  >
    <a
      href="https://example.com"
    >
      Tickets
    </a>
  </h4>
</Layout>
`;

exports[`A show loads correctly with no tickets 1`] = `
<Layout>
  <SEO
    description="<p>All the acting</p>"
    image="https://example.com"
    keywords={
      Array [
        "czech",
        "theater",
        "show",
      ]
    }
    title="Alquist's revenge"
  />
  <h1>
    Alquist's revenge
  </h1>
  <div
    className="mainImage"
  >
    <img
      alt="A cool image"
      sizes="(max-width: 400px) 360px,(max-width: 800px) 760px,(max-width: 1200) 1140px"
      src="https://example.com"
      srcSet="https://example.com?w=400&fit=crop 400w, https://example.com?w=800&fit=crop 800w, https://example.com?w=1200&fit=crop 1200w, "
    />
  </div>
  <div
    className="showDescription"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>All the acting in a longer way.</p>",
      }
    }
  />
  <Gallery
    images={
      Array [
        Object {
          "description": "A cool image",
          "url": "https://example.com",
        },
      ]
    }
  />
</Layout>
`;
